--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,47 @@
 <!DOCTYPE HTML>
 <html>
-  <h1>There's nothing here yet!</h1>
-  <h3>Stay tuned for updates.</h3>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+	<div class="header-wrapper">
+		<div class="header-div">
+			<h1>Karen's World</h1>
+		</div>
+	</div>
+	<div class="menu-wrapper">
+		<h3>Menu</h3>
+		<div class="menu-item">
+			<h3>No</h3>
+		</div>
+		<div class="menu-item">
+			<h3>Menu</h3>
+		</div>
+		<div class="menu-item">
+			<h3>Yet</h3>
+		</div>
+	</div>
+	<div class="main-area">
+		<h3>Welcome!</h3>
+		Latest update: There's a homepage now! Thank you for your patience. <br><br>
+		<h3>About Me</h3>
+		Hi, my name is Karen! I live in Everett, Washington. <br>
+		I graduated from the University of Colorado Colorado Springs in May of
+		2018 with a bachelor's degree in computer science. One of the main 
+		purposes of this website is for me to exercise my coding skills. <br>
+		Some years ago, I attended culinary school at Johnson & Wales University in Denver, 
+		Colorado, and I worked in restaurants for several years. Eventually I 
+		realized that I missed doing math and solving problems, so I left the 
+		culinary world to go back to school and change to a career in computers. 
+		However, I still cook for myself and my husband.<br><br>
+		<h3>About This Site</h3>
+		This site is very much a work in progress! More features will appear 
+		with time, so if you like what you see, check back later for more! <br>
+		As the site grows, there will be a variety of pages with apps related to 
+		classic puzzles and coding problems. Please keep Javascript enabled in 
+		your browser to see all the fun features!<br>
+		I will also post my thoughts on various topics that interest me, including 
+		cooking, knitting, and pet rabbits.
+	</div>
+</body>
 </html>
