Attempted Heroku fix

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+<head>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+</head>
 <body>
 	<div class="header-wrapper">
 		<div class="header-div">
